<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.travel.tracker.forms.dashboard">

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2.5"
            android:background="@android:color/holo_red_light"
            android:clickable="true"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:id="@+id/Complated_Orders"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:src="@drawable/complated_orders" />

                <TextView
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:text="@string/Today_Visit"
                    android:textColor="@color/white" />
            </FrameLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@android:color/holo_red_dark"
            android:clickable="true">
            <FrameLayout
                android:layout_width="match_parent"
                android:id="@+id/Rejected_Orders"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rejected_order"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Leave"
                    android:textColor="@color/white"
                    android:layout_marginBottom="15dp"
                    android:layout_gravity="bottom"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_dark"
            android:clickable="true">

            <FrameLayout
                android:id="@+id/Pending_Order"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground">


                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="50dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/Work_Status"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/pending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:src="@drawable/pending_orders" />

            </FrameLayout>

        </LinearLayout>


            <TextView
                android:layout_gravity="right"
                android:layout_width="40dp"
                android:layout_height="40dp"
               android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/dash_count"
                android:gravity="center"
                android:text="10"
                android:visibility="gone"
                android:id="@+id/Count"
                android:textColor="@color/white" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="vertical">
        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.2"
            android:orientation="vertical"
            android:background="@android:color/holo_green_dark"
            android:clickable="true">
            <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/All_Order"
            android:background="?android:attr/selectableItemBackground"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/all_order"
                android:gravity="center"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:fontFamily="sans-serif-light"
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/All_Order"
                android:textColor="@color/white"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                />
        </FrameLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1.2"
                android:orientation="vertical"
                android:background="@color/blue_light"
                android:clickable="true">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:id="@+id/All_Order_details"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/pending_order"
                        android:gravity="center"
                        android:layout_marginTop="40dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="sans-serif-light"
                        android:text="Attentence"
                        android:textColor="@color/white"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="50dp"
                        />
                </FrameLayout>
            </LinearLayout>

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:visibility="gone"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            android:background="@android:color/holo_blue_dark"
            android:clickable="true">

            <FrameLayout
                android:id="@+id/Cash_Collection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:src="@drawable/cash_collection" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="40dp"
                    android:gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/Cash_Collection"
                    android:textColor="@color/white" />
            </FrameLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"

            android:layout_marginLeft="5dp"

            android:orientation="vertical"
            android:background="@color/progressbar"
            android:clickable="true">
            <FrameLayout
                android:id="@+id/Notifications"
                android:layout_width="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/notification"
                android:gravity="center"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/New_Order"
                android:textColor="@color/white"
                android:layout_gravity="bottom"
                android:fontFamily="sans-serif-light"
                android:layout_marginBottom="15dp"/>
            </FrameLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="#9d4ae1"
                android:clickable="true"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/pushOrder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:src="@drawable/push_order" />

                    <TextView
                        android:id="@+id/textView29"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        android:text="@string/Messages"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/white" />
                </FrameLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>



</LinearLayout>
</ScrollView>
